[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/ui-textures/kenney_crosshairPack/PNG/White/crosshair003.png" type="Texture" id=2]
[ext_resource path="res://DialogPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://StatsPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Text3D.tscn" type="PackedScene" id=6]
[ext_resource path="res://Character.tscn" type="PackedScene" id=7]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Name/Viewport")

[sub_resource type="CapsuleShape" id=2]
radius = 0.821961
height = 0.71951

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
camera_type = 1

[node name="Name" parent="." instance=ExtResource( 6 )]
texture = SubResource( 1 )

[node name="EquipPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3967, 0.99039, -0.00652689 )

[node name="Cameras" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.254622, 0 )

[node name="ThirdPersonCameraPosition3D" type="Position3D" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.34922, 1.37141, 2.15219 )

[node name="ThirdPersonCamera" type="InterpolatedCamera" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33842, 8.36088 )
current = true
far = 8192.0
target = NodePath("../ThirdPersonCameraPosition3D")
enabled = true

[node name="InteractRaycast" type="RayCast" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52659, -0.618962 )
enabled = true
cast_to = Vector3( 0, 0, -5 )

[node name="FirstPersonCamera" type="Camera" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52659, -0.618962 )
far = 8192.0

[node name="UI" type="CanvasLayer" parent="Cameras"]

[node name="StatsPanel" parent="Cameras/UI" instance=ExtResource( 4 )]

[node name="CrossHair" type="TextureRect" parent="Cameras/UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogPanel" parent="Cameras/UI" instance=ExtResource( 3 )]
visible = false

[node name="Slots" type="HBoxContainer" parent="Cameras/UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Template" type="ToolButton" parent="Cameras/UI/Slots"]
visible = false
margin_right = 111.0
margin_bottom = 72.0
text = "Slot1"
icon = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.981777, 0 )
shape = SubResource( 2 )

[node name="Character" parent="." instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[editable path="Character"]
[editable path="Character/asian-girl"]
